--- a/index.html
+++ b/index.html
@@ -3,28 +3,53 @@
     <head>
         <title>MY PORTFOLIO</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        <style>
+          body{
+            background-image: url(html-web-code.webp);
+            background-size: cover;
+            background-repeat: no-repeat
+          }
+        </style>
         </head>
     <body>
-        <header>
-            <nav class="navigation">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
-            </nav>
-        </header>
-
-        
+    <h1>
+      <center>MARK KAGORI</center>
+      <CENTER>SOFTWARE ENGINEER</CENTER>
+    </h1>
+        <div class="banner">
+            <div class="navbar">
+              <ul>
+               <li><a href="#">HOME</a>
+               <li><a href="#">ABOUT</a></li>
+               <li><a href="#">SERVICES</a></li>
+               <li><a href="#">CONTACT</a></li>
+              </ul>
+            </div>
+          </div>
         <h2>ABOUT ME</h2>
-        <p>I am passionate web developer with experience.</p>
-        <p>I love creating responsive and user-friendly websites.</p>
+        <p>I am passionate web developer with experience over months and i know i'm the best althought i don't compete with anyone </p>
+        <p>because i truly know my work is magnificent and you personally will love it.Work with me and you will love it</p>
+        <p>The tech community has always been my favourite platform i really love to work with and my creativity through tech is excellent.</p>
         <h3>PROJECTS</h3>
         <P>Here are some of my projects:</P>
          <P> <U>.Project1</U> </P>
          <p><u>.Project 2</U></p>
          <p><u>.Project 3</u></p>
         <h4>Contact me</h3>
-        <p>Email: @ johnkiriamiti@gmail.com</p>
-        <p>Contact no.011123456782</p>
+        <p>Email: @mwangimark456@gmail.com</p>
+        <p>Contact no:0727231451</p>
+          <div class="card">
+            <h3 class="card-title">Software Developer</h3>
+            <p>system Software developer skilled on creating operating system</p>
+          </div>
+        </div>
+        <div class="card2">
+          <h3 class="card-title">Html,Css and Javascript developer</h3>
+          <p>Html,css,javascript developer and other skills required in development </p>
+        </div>
+        <h5>SPIRITUAL ANIMAL</h5>
+        <img src="Doberman-Pinschers.webp" alt="animal" width="300" height="300">
+        <p> my pet"Doberman Pinscher"</p>
     </body>
 </html>
